<resources>
    <string name="app_name">Task Manager</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="lbl_login">Login</string>
    <string name="lbl_password">Password</string>
    <string name="lbl_enter">Login</string>
    <string name="lbl_name">Name</string>
    <string name="lbl_description">Description</string>
    <string name="lbl_save">Save</string>
    <string name="lbl_add">Add</string>
    <string name="lbl_delete">Delete</string>
    <string name="lbl_edit">Edit</string>
    <string name="lbl_confirm">Confirm</string>
    <string name="lbl_yes">Yes</string>
    <string name="lbl_no">No</string>
    <string name="lbl_select_color">Select color</string>
    <string name="lbl_cancel">Cancel</string>

    <string name="msg_welcome">Welcome %s!</string>
    <string name="msg_required">Field required!</string>
    <string name="msg_save_success">Save successful!</string>
    <string name="msg_delete_success">Delete successful!</string>
    <string name="msg_confirm_delete">Want to delete this record?</string>
    <string name="lbl_signin">Sign In</string>
    <string name="login">Login</string>
    <string name="your_tasks">Your Tasks</string>
    <string name="create_new_task">Create a new task</string>
    <string name="create_new_label">Create a new label</string>
    <string name="create_new_login">Create a new login</string>
    <string name="lbl_zipcode">Zip Code</string>
    <string name="lbl_street">Street</string>
    <string name="lbl_neighborhood">Neighborhood</string>
    <string name="lbl_city">City</string>
    <string name="lbl_state">State</string>
    <string name="lbl_type">Type</string>
    <string name="searching_zipcode">Searching for ZipCode...</string>
    <string name="refresh">Refresh</string>

</resources>
